--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1606,7 +1606,7 @@ output {
   padding-top: 7px;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #555555;
+  color: #a0ced0;
   vertical-align: middle;
 }
 .form-control {
@@ -1616,7 +1616,7 @@ output {
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #555555;
+  color: #a0ced0;
   vertical-align: middle;
   background-color: #ffffff;
   background-image: none;
@@ -3295,7 +3295,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   font-size: 14px;
   font-weight: normal;
   line-height: 1;
-  color: #555555;
+  color: #a0ced0;
   text-align: center;
   background-color: #eeeeee;
   border: 1px solid #cccccc;
@@ -3436,7 +3436,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
-  color: #555555;
+  color: #a0ced0;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   border-bottom-color: transparent;
@@ -7300,7 +7300,14 @@ td.visible-print {
   color: #000;
   padding: 0.2em 0;
 }
-.jumbotron {
-  margin: 50px auto 0 auto;
+body {
+  background: #f6f2e2;
+  text-align: center;
+}
+body header h1 {
+  color: #414042;
+}
+body header h2 {
+  color: #f52900;
 }
 /*# sourceMappingURL=/styles/main.css.map */
