--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Cinzel+Decorative:400,900);
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 article,
 aside,
@@ -7304,23 +7305,33 @@ body,
 html {
   font-size: 10px;
 }
-body {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Cinzel Decorative";
+  font-weight: bold;
+}
+body[data-theme="default"] {
   background: #f6f2e2;
 }
-body header {
-  heigth: 300px;
+body[data-theme="default"] header {
+  height: 300px;
+  padding: 20px;
 }
-body header > * {
+body[data-theme="default"] header > * {
   margin: 0;
 }
-body header span {
+body[data-theme="default"] header span {
   font-size: 2em;
 }
-body header h1 {
+body[data-theme="default"] header h1 {
   color: #414042;
-  font-size: 3.8em;
+  font-size: 4.8em;
 }
-body header h2 {
+body[data-theme="default"] header h2 {
   color: #f52900;
   font-size: 1.8em;
 }
